@@ -487,6 +487,11 @@ void LayoutTestController::evaluateInWebInspector(long callId, JSStringRef scrip
     // FIXME: Implement this.
 }
 
+void LayoutTestController::evaluateScriptInIsolatedWorld(unsigned worldID, JSObjectRef globalObject, JSStringRef script)
+{
+    // FIXME: Implement this.
+}
+
 void LayoutTestController::removeAllVisitedLinks()
 {
     // FIXME: Implement this.
